--- a/main.css
+++ b/main.css
@@ -1,14 +1,29 @@
 
 body{
+    position: relative;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
+.header {
+    background-color: burlywood;
+    position: absolute;
+    height: 50px;
+    width: 100%;
+    top: 0;
+}
+
+#header {
+    top: 0;
+    position: absolute;
+}
+
 
 #container{
+    padding-top: 50px;
     position: relative;
     display: flex;
 }
@@ -17,29 +32,23 @@ body{
     cursor: pointer;
 }
 
-#color{
-    width: 100px;
-    height: 600px;
-    border:1px solid #000000;
-}
-
 .color-picker{
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
     cursor: pointer;
 }
 
 #btn-clear{
     position: absolute;
-    right: 0;
-    bottom: 0;
+    left: 0;
+    bottom: 50px;
     padding: 10px;
 }
 
 #size{
     position: absolute;
     width: 20px;
-    right: 0;
-    top: 0;
+    left: 0;
+    bottom: 0;
     padding: 10px;
 }
